Prevent wrapping of long text in admin actions panel

--- a/app/assets/stylesheets/flight_log.css.scss
+++ b/app/assets/stylesheets/flight_log.css.scss
@@ -189,6 +189,7 @@ body {
 	float: right;
 	text-align: right;
 	font-size: 100%;
+	white-space: nowrap;
 }
 
 #chart_div {
